--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,7 +22,7 @@ jobs:
         zip -r ../lambda_function.zip .
     - name: Update Lambda function code
       run: |
-        JSON_RETURN=$(aws lambda update-function-code --function-name L_Global_text/html --zip-file fileb://lambda_function.zip --publish)
+        JSON_RETURN=$(aws lambda update-function-code --function-name L_Global_DeletePipeline --zip-file fileb://lambda_function.zip --publish)
         FUNCTION_VERSION=`echo "$JSON_RETURN" | jq '.Version'`
         FUNCTION_VERSION=`echo "${FUNCTION_VERSION:1:${#FUNCTION_VERSION}-2}"`
         echo $FUNCTION_VERSION
